Made GUI elements in login form resource bundle based.

--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -33,5 +33,7 @@ energyData= Energy
 accountSettings=Settings
 accountGroups=Groups
 accountTEDS=Gateways
+passwordLabel=Password:
+userNameLabel=Login:
 
 
