--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -21,6 +21,7 @@
 
 #Dashboard Elements
 
+#tabs
 month = Month
 day = Day
 hour = Hour
@@ -33,7 +34,40 @@ energyData= Energy
 accountSettings=Settings
 accountGroups=Groups
 accountTEDS=Gateways
+systemServer= Server
+systemUsers= Users
+
+
+#login form
 passwordLabel=Password:
 userNameLabel=Login:
 
+
+#content panel
+settingsTitle=User Account Settings
+settingsInstructions=To change your user account settings, please modify the fields below and click 'Save' when complete.
+
+groupsTitle=Groups
+groupsInstructions=Use the below form to create,remove, or assign Gateways to a group. A Gateway can be assigned to more than one group.
+
+gatewaysTitle= Gateways
+gatewaysInstructions= Use the below form to enroll or remove a gateway from Aggredata
+
+monthTitle= Monthly View
+monthInstructions= The graphs below provide the monthly view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
+
+dayTitle= Daily View
+dayInstructions= The graphs below provide the daily view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
+
+hourTitle= Hourly View
+hourInstructions= The graphs below provide the hourly view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
+
+minuteTitle= Minute View
+minuteInstructions= The graphs below provide the per-minute view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
+
+systemUsersTitle= User Administration
+systemUsersInstructions= Use the form below to add, remove, or modify AggreData users.
+
+systemServerTitle= System Administration
+systemServerInstructions= Use the form below to modify AggreData's server settings.
 
