--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -71,3 +71,8 @@ systemUsersInstructions= Use the form below to add, remove, or modify AggreData 
 systemServerTitle= System Administration
 systemServerInstructions= Use the form below to modify AggreData's server settings.
 
+
+profileSettingsLastName = Last Name:
+profileSettingsFirstName = First Name:
+profileSettingsCompanyName = Company:
+
