--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -50,8 +50,6 @@ settingsInstructions=To change your user account settings, please modify the fie
 groupsTitle=Groups
 groupsInstructions=Use the below form to create,remove, or assign Gateways to a group. A Gateway can be assigned to more than one group.
 
-gatewaysTitle= Gateways
-gatewaysInstructions= Use the below form to enroll or remove a gateway from Aggredata
 
 monthTitle= Monthly View
 monthInstructions= The graphs below provide the monthly view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
@@ -75,4 +73,12 @@ systemServerInstructions= Use the form below to modify AggreData's server settin
 profileSettingsLastName = Last Name:
 profileSettingsFirstName = First Name:
 profileSettingsCompanyName = Company:
+
+
+gatewaysTitle= Gateways
+gatewaysInstructions= To add a gateway to Aggredata, select the 'Edit->Activate Energy Posting' option from the menu of the TED Gateway you wish to add. Once activated, the Gateway will appear on the activated list below.
+gatewaysActivationInstructions1= Enter the following information on your TED Gateway's Activation Popup to register your Gateway with AggreData.
+gatewaysActivationInstructions2= To edit the details or remove a gateway, click the "Modify" button next to the listed gateway. To assign a Gateway to a group, use the "Groups" tab.
+
+
 
