--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -22,10 +22,10 @@
 #Dashboard Elements
 
 #tabs
-month = Month
-day = Day
-hour = Hour
-minute = Minute
+month = month
+day = day
+hour = hour
+minute = minute
 hello= Hello,
 profile=Profile
 admin=Admin
@@ -33,6 +33,7 @@ logout= Log Out
 energyData= Energy
 accountSettings=Settings
 accountGroups=Groups
+accountActivate=Activate!
 accountTEDS=Gateways
 systemServer= Server
 systemUsers= Users
@@ -41,6 +42,11 @@ systemUsers= Users
 #login form
 passwordLabel=Password:
 userNameLabel=Login:
+
+
+#date fields
+
+minutes=minutes
 
 
 #content panel
@@ -76,9 +82,20 @@ profileSettingsCompanyName = Company:
 
 
 gatewaysTitle= Gateways
-gatewaysInstructions= To add a gateway to Aggredata, select the 'Edit->Activate Energy Posting' option from the menu of the TED Gateway you wish to add. Once activated, the Gateway will appear on the activated list below.
-gatewaysActivationInstructions1= Enter the following information on your TED Gateway's Activation Popup to register your Gateway with AggreData.
-gatewaysActivationInstructions2= To edit the details or remove a gateway, click the "Modify" button next to the listed gateway. To assign a Gateway to a group, use the "Groups" tab.
+gatewaysInstructions= Edit or Remove the Gateways posting to AggreData
 
 
+
+activateTitle=Activate a Gateway
+activateInstructions1= Follow these instructions to add one or more Gateways to the AggreData system.
+activateInstructions2= To add a new Gateway to AggreData, you will need to 'Activate Energy Posting' from the Gateway device itself. To do this, \
+  select 'Edit->Activate Third Party Posting' from the Gateway's main menu.
+
+activateInstructions3= After making the above menu choice, you will be prompted for information regarding this third party aggregator. Please enter \
+  the below information:
+
+activationLabel1= Activation URL:
+activationLabel2= Activation Key:
+activationInstructions4 = After the information is entered, press the "Activate Energy Posting' button and wait for the response. If the device is activated \
+  you should see data posting to this site within
 
