--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -77,10 +77,19 @@ systemServerInstructions= Use the form below to modify AggreData's server settin
 
 
 profileSettingsLastName = Last Name:
+profileSettingsMiddleName = Middle Name:
 profileSettingsFirstName = First Name:
 profileSettingsCompanyName = Company:
-
-
+profileSettingsAddress = Address:
+profileSettingsCity = City:
+profileSettingState State:
+profileSettingsZip = Zip:
+profileSettingsPhoneNumber = Phone:
+profileSettingsCustom1 = Custom 1:
+profileSettingsCustom2 = Custom 2:
+profileSettingsCustom3 = Custom 3:
+profileSettingsCustom4 = Custom 4:
+profileSettingsCustom5 = Custom 5:
 gatewaysTitle= Gateways
 gatewaysInstructions= Edit or Remove the Gateways posting to AggreData
 
