Added group panel layout

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -108,3 +108,10 @@ activationLabel2= Activation Key:
 activationInstructions4 = After the information is entered, press the "Activate Energy Posting' button and wait for the response. If the device is activated \
   you should see data posting to this site within
 
+
+groupSettingsDescription = Description:
+groupSettingsCustom1 = Custom 1:
+groupSettingsCustom2 = Custom 2:
+groupSettingsCustom3 = Custom 3:
+groupSettingsCustom4 = Custom 4:
+groupSettingsCustom5 = Custom 5:
