--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -21,6 +21,10 @@
 
 #Dashboard Elements
 
+yes = Yes
+no = No
+ok = OK
+
 #tabs
 month = month
 day = day
@@ -115,3 +119,10 @@ groupSettingsCustom2 = Custom 2:
 groupSettingsCustom3 = Custom 3:
 groupSettingsCustom4 = Custom 4:
 groupSettingsCustom5 = Custom 5:
+
+#delete popup
+deleteGroupTitle = Delete Group?
+deleteGroupMessage = Are you sure you want to delete the group
+
+deleteGroupCantDeleteTitle = Sorry
+deleteGroupCantDeleteText = You must have at least one group created for this account
