--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -24,6 +24,8 @@
 yes = Yes
 no = No
 ok = OK
+add = Add
+delete = Delete
 
 #tabs
 month = month
@@ -113,6 +115,8 @@ activationInstructions4 = After the information is entered, press the "Activate 
   you should see data posting to this site within
 
 
+yourGroups = Your Groups
+groupDetails = Group Details
 groupSettingsDescription = Description:
 groupSettingsCustom1 = Custom 1:
 groupSettingsCustom2 = Custom 2:
@@ -126,3 +130,29 @@ deleteGroupMessage = Are you sure you want to delete the group
 
 deleteGroupCantDeleteTitle = Sorry
 deleteGroupCantDeleteText = You must have at least one group created for this account
+
+
+yourGateways = Your Gateways
+gatewayDetails = Gateway Details
+#delete popup
+deleteGatewayTitle = Delete Gateway?
+deleteGatewayMessage = Are you sure you want to delete the gateway? All energy information will also be deleted.
+
+
+gatewaySerialNumber = Serial Number:
+gatewaySettingsDescription = Description:
+gatewaySettingsCustom1 = Custom 1:
+gatewaySettingsCustom2 = Custom 2:
+gatewaySettingsCustom3 = Custom 3:
+gatewaySettingsCustom4 = Custom 4:
+gatewaySettingsCustom5 = Custom 5:
+
+
+
+mtuSerialNumber = Serial No.
+mtuDescription = Description
+mtuType = Type
+
+
+deleteMTUTitle = Delete MTU
+deleteMTUMessage = Are you sure you want to delete the MTU? All energy information will also be deleted.
