Optimized imports Added side panel for group selection added maven calls for Google Chart libraries

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -156,3 +156,9 @@ mtuType = Type
 
 deleteMTUTitle = Delete MTU
 deleteMTUMessage = Are you sure you want to delete the MTU? All energy information will also be deleted.
+
+
+sideBarGroupHeader = Your Groups
+sideBarGroupDetails = Select which group to graph.
+sideBarDateHeader = Date Range
+sideBarDateDetails = Select the date range to display.
