--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -162,3 +162,9 @@ sideBarGroupHeader = Your Groups
 sideBarGroupDetails = Select which group to graph.
 sideBarDateHeader = Date Range
 sideBarDateDetails = Select the date range to display.
+sideBarTypeHeader = Energy or Cost?
+sideBarTypeDetails = What values would you like displayed?
+
+
+startDate = Start:
+endDate = End:
