--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -91,6 +91,7 @@ profileSettingsCity = City:
 profileSettingState State:
 profileSettingsZip = Zip:
 profileSettingsPhoneNumber = Phone:
+profileSettingsTimezone = Timezone:
 profileSettingsCustom1 = Custom 1:
 profileSettingsCustom2 = Custom 2:
 profileSettingsCustom3 = Custom 3:
