Upgraded to 1.1 version of Google Charts Added totals to graph page

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -159,13 +159,31 @@ deleteMTUTitle = Delete MTU
 deleteMTUMessage = Are you sure you want to delete the MTU? All energy information will also be deleted.
 
 
+#SIDE BAR TAGS
 sideBarGroupHeader = Your Groups
 sideBarGroupDetails = Select which group to graph.
 sideBarDateHeader = Date Range
 sideBarDateDetails = Select the date range to display.
 sideBarTypeHeader = Energy or Cost?
 sideBarTypeDetails = What values would you like displayed?
-
-
 startDate = Start:
 endDate = End:
+
+#GRAPHING TAGS
+graphMonthly=Monthly
+graphDaily=Daily
+graphHourly=Hourly
+graphPerminute=Per minute
+graphCost = Cost
+graphEnergy = Energy
+graphCSVExport=Export
+graphTotalCost = Total Cost
+graphTotalEnergy = Total Energy
+graphDateRange = for
+graphTo = to
+
+graphTypeCost = Cost (Dollars)
+graphTypeEnergy = Energy (kWh)
+
+
+
