--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -185,5 +185,11 @@ graphTo = to
 graphTypeCost = Cost (Dollars)
 graphTypeEnergy = Energy (kWh)
 
+#minute selection panel
+minuteDate = Date:
+minuteStartTime = Start:
+minuteEndTime = End:
+minuteInterval = Interval:
+
 
 
