--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -73,7 +73,7 @@ hourTitle= Hourly View
 hourInstructions= The graphs below provide the hourly view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
 
 minuteTitle= Minute View
-minuteInstructions= The graphs below provide the per-minute view of the selected Group. To change the group view, select the group from the left-hand navigational panel.
+minuteInstructions= The graphs below provide the per-minute average of the selected Group. To change the group view, select the group from the left-hand navigational panel.
 
 systemUsersTitle= User Administration
 systemUsersInstructions= Use the form below to add, remove, or modify AggreData users.
