--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -191,6 +191,11 @@ minuteStartTime = Start:
 minuteEndTime = End:
 minuteInterval = Interval:
 
+#admin page
+adminTitle = User Administration
+adminInstructions = Edit/Add/Remove Users
+yourUsers = Users
+
 
 #export button
 export = Export
