Updated UserDetailsPanel and the UserButtonPanel for alignment and functionality.

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -195,7 +195,11 @@ minuteInterval = Interval:
 adminTitle = User Administration
 adminInstructions = Edit/Add/Remove Users
 yourUsers = Users
-
+userDetails = User Information
+firstNameField = First Name:
+lastNameField = Last Name:
+middleNameField = Middle Name:
+usernameField = Username:
 
 #export button
 export = Export
