--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
@@ -22,13 +22,21 @@
 #login form
 passwordLabel=Password:
 userNameLabel=Login:
-
-#change password
-passwordPrompt=Did you forget your Password?
-passwordMessage=Please enter the email address you used for your AggreData account. This will reset the password for your account and email it to the address specified below.
+confirmPasswordLabel=Confirm Pass:
+confirmUserNameLabel=Confirm Login:
 
 
-#join prompt
-joinRequestPrompt = Not a member?
-joinButtonText = Join!
+joinHeader = Thanks for signing up with AggreData. Please enter your information below. After hitting submit, \
+  you will be sent an email with a link for activation. Afterwards, you will be allowed to log into th system \
+  and start posting data!
 
+
+pendingApprovalError = Your account is still pending approval. Please try re-submitting again.
+notEmailError = You must specify an email account for your login.
+alreadyExists = A user with that email account already exists
+confirmUsernameError = Your username and username confirmation must match.
+confirmPasswordError = Your password and password confirmation must match.
+
+invalid = Not Valid
+noMatch = Does Not Match
+required = Required
