--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
@@ -21,9 +21,9 @@
 
 #login form
 passwordLabel=Password:
-userNameLabel=Login:
+userNameLabel=Email:
 confirmPasswordLabel=Confirm Pass:
-confirmUserNameLabel=Confirm Login:
+confirmUserNameLabel=Confirm Email:
 
 
 joinHeader = Thanks for signing up with AggreData. Please enter your information below. After hitting submit, \
@@ -32,11 +32,24 @@ joinHeader = Thanks for signing up with AggreData. Please enter your information
 
 
 pendingApprovalError = Your account is still pending approval. Please try re-submitting again.
-notEmailError = You must specify an email account for your login.
+
+notEmailError = Not Email
 alreadyExists = A user with that email account already exists
 confirmUsernameError = Your username and username confirmation must match.
 confirmPasswordError = Your password and password confirmation must match.
 
 invalid = Not Valid
-noMatch = Does Not Match
+noMatch = Must Match
 required = Required
+
+captcha = Enter the value below:
+reloadCaptcha = Reload Image
+formErrors = One or more of the below fields contains errors.
+captchaError = The captcha value entered does not match.
+captchaRequired = The captcha image value must be entered.
+
+
+activationTitle = Activation Email Sent
+
+activationDescription = An email with an activation link has been sent to your account. Please follow that link to validate your email address and activate your account.
+
