--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -196,8 +196,13 @@ yourUsers = Users
 userDetails = User Information
 firstNameField = First Name:
 lastNameField = Last Name:
-middleNameField = Middle Name:
+custom1Field = Custom 1:
 usernameField = Username:
+custom2Field = Custom 2:
+custom4Field = Custom 4:
+custom5Field = Custom 5:
+custom3Field = Custom 3:
+
 
 #export button
 export = Export
