--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -97,8 +97,15 @@ profileSettingsCustom4 = Custom 4:
 profileSettingsCustom5 = Custom 5:
 gatewaysTitle= Gateways
 gatewaysInstructions= Edit or Remove the Gateways posting to AggreData
+profileSettingsChangeEmail = Change Email
+profileSettingsChangePass = Change Password
 
-
+changeEmail = Change Email
+changePassword = Change Password
+changePasswordMessage = Please enter a new password. The password must be a minimum of 5 characters.
+changeEmailMessage = Please enter a new email. The email must be a minimum of 5 characters.
+changeEmailVerification = Are you sure?
+changePassVerification = Are you sure?
 
 activateTitle=Activate a Gateway
 activateInstructions1= Follow these instructions to add one or more Gateways to the AggreData system.
