Added checkbox to show/hide the total cumulative value on the graphs.

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -170,7 +170,7 @@ sideBarGroupDetails = Select which group to graph.
 sideBarDateHeader = Date Range
 sideBarDateDetails = Select the date range to display.
 sideBarTypeHeader = Energy or Cost?
-sideBarTypeDetails = What values would you like displayed?
+sideBarTypeDetails = Please select
 startDate = Start:
 endDate = End:
 
@@ -186,6 +186,7 @@ graphTotalCost = Total Cost
 graphTotalEnergy = Total Energy
 graphDateRange = for
 graphTo = to
+graphShowTotal=Show Total?
 
 graphTypeCost = Cost (Dollars)
 graphTypeEnergy = Energy (kWh)
