--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -90,11 +90,6 @@ profileSettingState State:
 profileSettingsZip = Zip:
 profileSettingsPhoneNumber = Phone:
 profileSettingsTimezone = Timezone:
-profileSettingsCustom1 = Custom 1:
-profileSettingsCustom2 = Custom 2:
-profileSettingsCustom3 = Custom 3:
-profileSettingsCustom4 = Custom 4:
-profileSettingsCustom5 = Custom 5:
 gatewaysTitle= Gateways
 gatewaysInstructions= Edit or Remove the Gateways posting to AggreData
 profileSettingsChangeEmail = Change Email
@@ -124,13 +119,15 @@ activationInstructions4 = After the information is entered, press the "Activate 
 yourGroups = Your Groups
 groupDetails = Group Details
 groupSettingsDescription = Description:
-groupSettingsCustom1 = Custom 1:
-groupSettingsCustom2 = Custom 2:
-groupSettingsCustom3 = Custom 3:
-groupSettingsCustom4 = Custom 4:
-groupSettingsCustom5 = Custom 5:
+
+shareGroup = Share Group
+groupShareHeader = Users who can currently view
+groupShareAddLabel = Name or Email:
+groupShareAddButton = Add
+
 
 #delete popup
+
 deleteGroupTitle = Delete Group?
 deleteGroupMessage = Are you sure you want to delete the group
 
@@ -147,11 +144,6 @@ deleteGatewayMessage = Are you sure you want to delete the gateway? All energy i
 
 gatewaySerialNumber = Serial Number:
 gatewaySettingsDescription = Description:
-gatewaySettingsCustom1 = Custom 1:
-gatewaySettingsCustom2 = Custom 2:
-gatewaySettingsCustom3 = Custom 3:
-gatewaySettingsCustom4 = Custom 4:
-gatewaySettingsCustom5 = Custom 5:
 
 
 
@@ -204,12 +196,7 @@ yourUsers = Users
 userDetails = User Information
 firstNameField = First Name:
 lastNameField = Last Name:
-custom1Field = Custom 1:
 usernameField = Username:
-custom2Field = Custom 2:
-custom4Field = Custom 4:
-custom5Field = Custom 5:
-custom3Field = Custom 3:
 
 
 #export button
@@ -218,4 +205,5 @@ export = Export
 
 #loading popup
 loading = Loading
+
 
