Added group member add/remove gui

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -124,6 +124,12 @@ shareGroup = Share Group
 groupShareHeader = Users who can currently view
 groupShareAddLabel = Name or Email:
 groupShareAddButton = Add
+groupShareInstructions = To share this group with another user, please enter their name, company name, or email address below and click the "Add" button. To remove a user from this group, please click the "Remove" button next to their name.
+groupMembers = Group Members
+graphShareMemberRemoveTitle=Confirm Removal?
+graphShareMemberRemoveText=Are you sure you want to delete the user
+graphShareAlreadyExists=The specified user is already a member of this group.
+graphShareAlreadyExistsTitle=Already Member
 
 
 #delete popup
@@ -205,5 +211,6 @@ export = Export
 
 #loading popup
 loading = Loading
-
+close= Close
+remove=Remove
 
