--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -26,6 +26,7 @@ no = No
 ok = OK
 add = Add
 delete = Delete
+cancel = Cancel
 
 #tabs
 month = month
@@ -202,7 +203,7 @@ yourUsers = Users
 userDetails = User Information
 firstNameField = First Name:
 lastNameField = Last Name:
-usernameField = Username:
+usernameField = Email:
 
 
 #export button
@@ -214,3 +215,13 @@ loading = Loading
 close= Close
 remove=Remove
 
+#delete user popup
+deleteUser = Delete User?
+deleteUserVerification = Are you sure you want to delete this user?
+
+#create user popip
+firstNameMessage = First Name:
+lastNameMessage = Last Name:
+emailMessage = Email:
+passwordMessage = Password:
+createUser = Create User
