Added Style to SuggestionBox dropdown Cleaned up display when a group is selected that does not have any gateways assigned to it When user is redirected to "Activate" page, the navigation bar now highlights the proper link

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -174,6 +174,8 @@ startDate = Start:
 endDate = End:
 
 #GRAPHING TAGS
+graphNoDataTitle = No Gateways
+graphNoDataText = There are not any Gateways assigned to this group. Please add a Gateway to this Group via your Profile settings.
 graphMonthly=Monthly
 graphDaily=Daily
 graphHourly=Hourly
