--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -174,6 +174,8 @@ startDate = Start:
 endDate = End:
 
 #GRAPHING TAGS
+graphNoDataTitle = No Gateways
+graphNoDataText = There are not any Gateways assigned to this group. Please add a Gateway to this Group via your Profile settings.
 graphMonthly=Monthly
 graphDaily=Daily
 graphHourly=Hourly
