--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -118,6 +118,7 @@ activationInstructions4 = After the information is entered, press the "Activate 
 
 
 yourGroups = Your Groups
+otherGroups = Other's Groups
 groupDetails = Group Details
 groupSettingsDescription = Description:
 
