Added field length validation for password on join form

--- a/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
@@ -37,6 +37,7 @@ notEmailError = Not Email
 alreadyExists = A user with that email account already exists
 confirmUsernameError = Your username and username confirmation must match.
 confirmPasswordError = Your password and password confirmation must match.
+passwordShortError = Your password must be at least 5 characters
 
 invalid = Not Valid
 noMatch = Must Match
@@ -52,4 +53,5 @@ captchaRequired = The captcha image value must be entered.
 activationTitle = Activation Email Sent
 
 activationDescription = An email with an activation link has been sent to your account. Please follow that link to validate your email address and activate your account.
+tooShort=Too Short
 
