--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -19,6 +19,9 @@
 # To support Internationalization, all client viewable should be located in property files.
 #
 
+
+alreadyExists = A user with that email account already exists
+
 #Dashboard Elements
 
 yes = Yes
