Changed the way the passwords and emails are checked in the change email/password popups. Errors are now thrown in the popup instead of closing them out. Centralized the way that the list is being redrawn. Redrawing the list after every button press on the admin page. Edited the change user and change password server calls to remove the length checks for passwords and emails. Set the current index at the last position in the list for each button press.

--- a/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -105,6 +105,13 @@ changePasswordMessage = Please enter a new password. The password must be a mini
 changeEmailMessage = Please enter a new email. The email must be a minimum of 5 characters.
 changeEmailVerification = Are you sure?
 changePassVerification = Are you sure?
+passwordChanged = Password has been changed.
+emailChanged = Email has been changed.
+enableUser = Enable User
+disableUser = Disable User
+enableUserMsg = User has been enabled.
+disableUserMsg = User has been disabled.
+
 
 activateTitle=Activate a Gateway
 activateInstructions1= Follow these instructions to add one or more Gateways to the AggreData system.
@@ -210,6 +217,9 @@ userDetails = User Information
 firstNameField = First Name:
 lastNameField = Last Name:
 usernameField = Email:
+emailError = Email must be at least 5 characters in length.
+passwordError = Password must be at least 5 characters in length.
+required = Field is required.
 
 
 #export button
