--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/DashboardConstants.properties
@@ -105,6 +105,13 @@ changePasswordMessage = Please enter a new password. The password must be a mini
 changeEmailMessage = Please enter a new email. The email must be a minimum of 5 characters.
 changeEmailVerification = Are you sure?
 changePassVerification = Are you sure?
+passwordChanged = Password has been changed.
+emailChanged = Email has been changed.
+enableUser = Enable User
+disableUser = Disable User
+enableUserMsg = User has been enabled.
+disableUserMsg = User has been disabled.
+
 
 activateTitle=Activate a Gateway
 activateInstructions1= Follow these instructions to add one or more Gateways to the AggreData system.
@@ -210,6 +217,9 @@ userDetails = User Information
 firstNameField = First Name:
 lastNameField = Last Name:
 usernameField = Email:
+emailError = Email must be at least 5 characters in length.
+passwordError = Password must be at least 5 characters in length.
+required = Field is required.
 
 
 #export button
