--- a/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
+++ b/trunk/src/main/java/com/ted/aggredata/client/resources/lang/JoinConstants.properties
@@ -55,3 +55,7 @@ activationTitle = Activation Email Sent
 activationDescription = An email with an activation link has been sent to your account. Please follow that link to validate your email address and activate your account.
 tooShort=Too Short
 
+
+submitInstructions = By clicking 'Submit' you agree to the AggreData
+touPolicy = Terms and Conditions of Use
+
